# qcviz-v04

./: .coverage  .env.example  .gitignore  AUDIT_REPORT.md  DEEP_SCAN_REPORT_qcviz-mcp_2026-03-28.md  FULL_CODE_AUDIT.md  MCP_ARCHITECTURE_ANALYSIS.md  MCP_TASK_PROMPT.md  PPT_HTML_DECK_GENERATION_PROMPT.md  generate_v3_context.sh  nohup.out  pyproject.toml  pytest.ini  qcviz_upgrade_final.diff  start_server.sh  test_3dmol.html  test_init.js  test_orbital_cache.py  test_viewer_js.js  v3_patch_context.md  v3_patch_direction.1.md  v3_patch_direction.2.md  v3_patch_direction.3.md  v3_patch_direction.4.md  v3_patch_final_prompt.md  v3_patch_prompt.md
docs/: 20260308.0100.v5고도화.작업지시프롬프트.md  20260308.0200.전수조사_작업지시서.md  20260308.0226.v5_사용시나리오.md  20260310.2322.01.md  20260310_수정7.md  20260310_수정요구사항2.md  20260310_수정요구사항3.md  20260310_수정요구사항4.md  20260310_수정요구사항5.md  20260310_수정요구사항6.md  20260320_웹서버_워커분리_모바일최적화안.md  20260320_전체기능_정성설명서.md  20260321_arq_worker_activation.md  20260321_queue_eta_recovery_admin.md  20260321_structure_clarification_issue_dossier.md  20260321_web_worker_split_runtime_status.md  20260324_implementation_changes_stabilization.md  DIAGNOSTIC_AND_REPAIR_PROMPT.md  PPT구성.md  PROMPT_ADVANCED_FEATURES.md  PROMPT_ADVANCED_FEATURES_LOADING.md  PROMPT_BACKEND_UPGRADE.md  PROMPT_FIX_COLOR_CHARGES.md  PROMPT_FIX_COLOR_SCHEME.md  PROMPT_FIX_ESP_COLOR_FINAL.md  PROMPT_FIX_ESP_TOGGLE.md  PROMPT_FIX_MOLCHAT_API.md  PROMPT_FIX_VIEWER.md  PROMPT_FIX_VIEWER_SCROLL_UI.md  PROMPT_UI_UPGRADE.md  QCVIZ_CHAT_STATE_INTEGRITY_FIX_PROMPT_2026-03-29.md  SUMMARY_AND_PROMPT.md  (+13 more)
(+463 files in other folders)
